# funkagent

./: LICENSE  README.md  pyproject.toml  quickstart.ipynb
funkagent/: agents.py  parser.py
test/: test_parser.py
